# damn

./: .gitignore  pyproject.toml  readme.md
damn/: __init__.py  calculator.py  compose.py  error.py  utils.py
damn/definition/: __init__.py  abc.py  domain.py  in_pair.py  in_single.py
damn/lib/: __init__.py  wolfram.py
damn/value/: __init__.py  abc.py  decimal.py  rational.py
